# autoresearch

./: .aider.chat.history.md  .aider.input.history  .editorconfig  .env.example  .gitignore  .train_clean.py  AGENTS.md  ARCHITECTURE.md  AUTOANYTHING.md  AUTORESEARCH_V2.md  BUILDER_GUIDE.md  BUSINESS_APPLICATIONS.md  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  CONTRIBUTING.md  CREATE_PROBLEM.md  DEEP_DIVE.md  Dockerfile  EXPLANATION.md  FLASH_ATTENTION_STATUS.md  INTEGRATION_GUIDE.md  KARPATHY_TRAINING_GUIDE.md  LEARNING.md  LICENSE  PLAN.md  PLAN_FRAMEWORK.md  PLAN_SCORING.md  PLAN_SIMPLIFY.md  PR1_MIXED_PRECISION.md  PR_DESCRIPTION.md  PUSH_INSTRUCTIONS.md  README.md  README.zh.md  README_PROFILE.md  ROADMAP.md  SCORE_DOCS.md  SECURITY.md  SKILL.md  The Winchester_NM UW_V2 (1).xlsm  (+148 more)
.aider.tags.cache.v4/: cache.db
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-push
.github/: copilot-instructions.md
.ipynb_checkpoints/: results-checkpoint.tsv
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
Cambridge project/: FRP_R14_MAltay.docx  The proposal draft_V1_MA.docx  build_frp_docx.py
addition/: train.py
agents/: AGENTS.md  research-runner.md
ane/: Makefile  experiment_config.h  stories_config.h  stories_cpu_ops.h  stories_io.h  stories_mil_dynamic.h  train_ane.m
atari/: agent.py  prepare.py  program.md  pyproject.toml  run.py
autoresearch/: __init__.py  cli.py  config.py  metrics.py  model.py  patched_loop.py  researcher.py  tokenizer.py  toy_train.py  tribunal.py
autoresearch_trainer/: __init__.py  compile.py  config.py  model.py  optimizer.py  runner.py  token_cache.py
autosaas/: branch_keeper.py  config.py  implementation_executor.py  main.py  privacy_guard.py  repo_context_loader.py  reporter.py  results_logger.py  state.py  task_slicer.py  utils.py  validation_pipeline.py
benchmarks/: KEY_FINDINGS.md  README.md  SUMMARY_2026-03-15.md
bj/: index.html  integration.js
btc-paper-trader/: config.yaml  pyproject.toml
btc-paper-trader/scripts/: export_artifacts.py  install_services.sh  replay.py  seed_data.py
btc-paper-trader/src/: alerts.py  data.py  features.py  inference.py  liquidations.py  logging_config.py  main.py  portfolio.py  report.py  supplementary.py
btc-paper-trader/tests/: test_data.py  test_features.py  test_inference.py  test_portfolio.py
codesolver/: prepare.py  program.md  pyproject.toml  solve.py
component_system/: PDCA-DO-CHECK-ACTION.md  PDCA-PLAN.md  README.md  config.py  protocol.md  run.py  run_arxiv.py  task.py
configs/: cpu.toml  cuda.toml  mps.toml  ttt_discover_autoresearch.yaml  ttt_discover_autoresearch_large.yaml  ttt_discover_autoresearch_medium.yaml  ttt_discover_autoresearch_small.yaml
core/: __init__.py  backtesting.py  config.py  epoch.py  evaluation.py
correlate/: __init__.py  __main__.py  analysis.py  config.py  db.py  explainability.py  market_data.py  ml.py  report.py  run.py
crew/: brain.py  cli.py  daemon.py  runner.py  scheduler.py
cron/: auto_research.sh  crontab.conf  daily_report.sh  setup.sh
data/: README.md
denoise/: .gitignore  prepare.py  program.md  pyproject.toml  results.tsv  train.py
deploy/: userdata.sh
dino_finetune/: prepare_dino.py  program_dino.md  train_dino.py
docker/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/: README.md  adding-models.md  agent-protocol.md  agent-skills.md  agent-workflow.md  architecture.md  autoanything.md  create-problem.md  evaluating-results.md  getting-started.md  model-selection.md  plan-mnemebrain-conditions.md  platform-support.md  scoring.md  target-repo-contract.md  validation-protocol.md  walkthrough.md
emi/: 2023_ea.xlsx  2024_ea.xlsx  2025 ea.xlsx  SEGE_kademe_EMI_TMI_15_24nufus_oran_2023_2025.xlsx  SEGE_kademe_EMI_TMI_15_24nufus_oran_2023_2025_plus.xlsx  SEGE_kademe_EMI_TMI_nufus_oran_2023_2025.xlsx  SEGE_kademe_EMI_TMI_yil_yuzde.xlsx  Tablo1_EMI_TMI_Cinsiyet_APA7.xlsx  Tablo2_Engelli_Yerlesen_APA7.xlsx  Tablo2_Engelli_Yerlesen_APA7_duzeltme2024.xlsx  kademe_yil_EMI_TMI_15_24_oranlari.xlsx  kademe_yil_EMI_TMI_tableau_english.xlsx  kademe_yil_EMI_TMI_tableau_geojson_matched.xlsx  kademe_yil_EMI_TMI_tableau_hazir.xlsx  map and tiers.twb
examples/: README.md  plot_progress.py  run_test.py
experiment/: load.py
fine_tuning/: README.md  prepare.py  program.md  train.py
fluxscore-research/: README.md  experiment.py  prepare.py  program.md  pyproject.toml
fluxscore-research/tests/: test_fluxscore_research.py
harness_research/: benchmark.py  contribute_eval.py  dashboard.py  evaluator.py  generator.py  promoter.py  queue_manager.py  ranker.py  reporter.py  run.py  (+1 more)
uarf/: README_UARF.md  __init__.py  pyproject.toml
uarf/cli/: uarf_cli.py
uarf/core/: config.py  hardware_detector.py  model_selector.py  trainer.py
(+535 files in other folders)
