[project]
name = "autoresearch"
version = "0.1.0"
description = "Product Research and Development Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.32.0",
    "duckduckgo-search>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.14.1",
]
