[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.4.0",
]

# Optional CUDA extras: install with `uv sync --extra cuda`
# (adds Flash-Attention 3 kernels; only useful on NVIDIA GPUs).
[project.optional-dependencies]
cuda = [
    "kernels>=0.11.7",
]

# By default we use the standard PyPI PyTorch wheel (CPU on Intel Macs,
# MPS on Apple Silicon, CUDA on Linux + matching driver). Users who want
# a specific CUDA wheel can override `tool.uv.sources` locally.
